fix: on-this-day trackers value not showing properly

--- a/public/main.css
+++ b/public/main.css
@@ -4513,11 +4513,15 @@ body.font-size-sm {
   font-size: var(--base-font-size); }
 
 body.font-size-md {
-  --base-font-size: 110%;
+  --base-font-size: 105%;
   font-size: var(--base-font-size); }
 
 body.font-size-lg {
-  --base-font-size: 120%;
+  --base-font-size: 110%;
+  font-size: var(--base-font-size); }
+
+body.font-size-xl {
+  --base-font-size: 130%;
   font-size: var(--base-font-size); }
 
 body.mint {
